--- a/jwell-club/html/admin/css/base.css
+++ b/jwell-club/html/admin/css/base.css
@@ -60,14 +60,6 @@ body {
 	background: #20242a;
 }
 
-.navbar-jclub .navbar-tool .fase-menu {
-	background: #2381e9;
-}
-
-.navbar-jclub .navbar-tool .fase-menu:hover {
-	background: #4F9AED;
-}
-
 .navbar-jclub .navbar-face {
 	margin:0 15px;
 	display: inline-block;
@@ -121,6 +113,70 @@ body {
 .sidebar {
 	width:220px;
 	height:100%;
-	margin-top:50px;
+	padding-top:50px;
 	background: #F5F7F9
+}
+
+.sidebar .first {
+	padding:0;
+	margin:10px 0 0 10px;
+	width:200px;
+	list-style: none;
+}
+
+.sidebar .first > li {
+	margin:0;
+	padding:0;
+}
+
+.sidebar .first > li > a {
+	width:100%;
+	height:40px;
+	line-height: 40px;
+	border-radius:2px;
+	-moz-border-radius:2px;
+	-webkit-border-radius:2px;
+	color:#768294;
+	background: transparent;
+	display: inline-block;
+	cursor: pointer;
+	transition:all .3s ease;
+	-ms-transition:all .3s ease;
+	-o-transition:all .3s ease;
+	-moz-transition:all .3s ease;
+	-webkit-transition:all .3s ease;
+}
+
+.sidebar .first > li > a > b {
+	float: left;
+	margin:8px 0 0 10px;
+	font-size:22px;
+	color:#C2C8D0;
+}
+
+.sidebar .first > li > a > span {
+	float:left;
+	margin-left:15px;
+	display: inline-block;
+}
+
+.sidebar .first > li > a:hover {
+	text-decoration: none;
+	color:#2381e9;
+	background:#fff;
+}
+
+.sidebar .first > li > a:hover b {
+	color:#A7CDF6;
+}
+
+.sidebar .first > .active > a:hover,
+.sidebar .first > .active > a {
+	background: #2381e9;
+	color:#fff;
+}
+
+.sidebar .first > .active > a:hover > b,
+.sidebar .first > .active > a > b {
+	color:#7BB3F2;
 }
