--- a/jwell-club/html/admin/css/base.css
+++ b/jwell-club/html/admin/css/base.css
@@ -117,7 +117,7 @@ body {
 	background: #F5F7F9
 }
 
-.sidebar .first {
+/*.sidebar .first {
 	padding:0;
 	margin:10px 0 0 5px;
 	width:200px;
@@ -125,18 +125,12 @@ body {
 }
 
 .sidebar .first > li {
-	margin:0;
-	padding:0;
-}
-
-.sidebar .first > li > a {
 	width:100%;
-	height:40px;
-	line-height: 40px;
+	margin:0 0 10px 0;
+	padding:0;
 	border-radius:2px;
 	-moz-border-radius:2px;
 	-webkit-border-radius:2px;
-	color:#768294;
 	background: transparent;
 	display: inline-block;
 	cursor: pointer;
@@ -147,17 +141,19 @@ body {
 	-webkit-transition:all .3s ease;
 }
 
-.sidebar .first > li > a > b {
-	float: left;
-	margin:8px 0 0 10px;
-	font-size:22px;
-	color:#C2C8D0;
+.sidebar .first > li > a {
+	height:40px;
+	width: 100%;
+	line-height: 40px;
+	color:#768294;
+	display: block;
 }
 
-.sidebar .first > li > a > span {
-	float:left;
-	margin-left:15px;
-	display: inline-block;
+.sidebar .first > li > a > b {
+	float: left;
+	margin:8px 15px 0 10px;
+	font-size:22px;
+	color:#C2C8D0;
 }
 
 .sidebar .first > li > a:hover {
@@ -166,17 +162,16 @@ body {
 	background:#fff;
 }
 
-.sidebar .first > li > a:hover b {
+.sidebar .first > li:hover b {
 	color:#A7CDF6;
 }
 
 .sidebar .first > .active > a:hover,
-.sidebar .first > .active > a {
+.sidebar .first > .active > a{
 	background: #2381e9;
-	color:#fff;
 }
 
 .sidebar .first > .active > a:hover > b,
 .sidebar .first > .active > a > b {
 	color:#7BB3F2;
-}
+}*/
