--- a/jwell-club/html/admin/css/base.css
+++ b/jwell-club/html/admin/css/base.css
@@ -118,11 +118,16 @@ body {
 	border-bottom-color:#d3d3d3;
 }
 
+.sidebar .pane{
+	right: auto;
+	width: 7px;
+}
+
 .sidebar {
 	width:220px;
 	height:100%;
 	padding-top:50px;
-	background: #F0F0F0
+	background: #F3F3F3;
 }
 
 .sidebar li {
@@ -143,7 +148,7 @@ body {
 }
 
 .sidebar .first > li {
-	margin: 5px 10px 0 5px;
+	margin: 5px 10px 0 10px;
 	background: transparent;
 	display: block;
 }
@@ -212,6 +217,7 @@ body {
 	margin: 0;
 	padding:0 0 5px 0;
 	list-style: none;
+	display: none;
 }
 
 .sidebar .second > li {
@@ -260,61 +266,30 @@ body {
 	color: #7BB3F2;
 }
 
-/*.sidebar .first {
-	padding:0;
-	margin:10px 0 0 5px;
-	width:200px;
-	list-style: none;
-}
-
-.sidebar .first > li {
-	width:100%;
-	margin:0 0 10px 0;
-	padding:0;
-	border-radius:2px;
-	-moz-border-radius:2px;
-	-webkit-border-radius:2px;
-	background: transparent;
-	display: inline-block;
-	cursor: pointer;
-	transition:all .3s ease;
-	-ms-transition:all .3s ease;
-	-o-transition:all .3s ease;
-	-moz-transition:all .3s ease;
-	-webkit-transition:all .3s ease;
-}
-
-.sidebar .first > li > a {
-	height:40px;
+.main-jclub {
 	width: 100%;
-	line-height: 40px;
-	color:#768294;
+	display: inline-block;
+}
+
+.continer-jclub {
+	margin:50px 0 0 220px;
 	display: block;
 }
 
-.sidebar .first > li > a > b {
-	float: left;
-	margin:8px 15px 0 10px;
-	font-size:22px;
-	color:#C2C8D0;
+.page-title {
+	width: 100%;
+	height:70px;
+	background: #e9ecf1;
+	display: inline-block;
 }
 
-.sidebar .first > li > a:hover {
-	text-decoration: none;
-	color:#2381e9;
-	background:#fff;
+.page-title > h3 {
+	margin:22px 5px 0 20px;
+	color:#2381E9;
+	display: inline-block;
 }
 
-.sidebar .first > li:hover b {
-	color:#A7CDF6;
+.page-title > small{
+	color:#797979;
+	display: inline-block;
 }
-
-.sidebar .first > .active > a:hover,
-.sidebar .first > .active > a{
-	background: #2381e9;
-}
-
-.sidebar .first > .active > a:hover > b,
-.sidebar .first > .active > a > b {
-	color:#7BB3F2;
-}*/
